third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/migrated_tests/round-trip/public_pack_unpack_ref.decompiled.public-struct.exp
processed 3 tasks
task 0 lines 3-72:  publish [module 0x42::pack_unpack_ref {]
task 1 lines 75-100:  publish [module 0x42::test_pack_unpack_ref {]
Error: compilation errors:
 error: cannot transfer mutable local `_v2` since it is borrowed
   ┌─ TEMPFILE1:83:19
   │
82 │         let _v3 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_x1_0(_v2);
   │                   ------------------------------------------------------------ previously mutably borrowed here
83 │         let _v4 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_x2_1(_v2);
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ transfer attempted here
   ·
89 │         assert!(*_v3 == 2, 2);
   │                 ---- conflicting reference `_v3` used here

error: cannot transfer mutable local `_v2` since it is borrowed
   ┌─ TEMPFILE1:84:19
   │
82 │         let _v3 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_x1_0(_v2);
   │                   ------------------------------------------------------------ previously mutably borrowed here
83 │         let _v4 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_x2_1(_v2);
   │                   ------------------------------------------------------------ previously mutably borrowed here
84 │         let _v5 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_s_2(_v2);
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ transfer attempted here
   ·
89 │         assert!(*_v3 == 2, 2);
   │                 ---- conflicting reference `_v3` used here
90 │         assert!(*_v4 == 3, 3);
   │                 ---- conflicting reference `_v4` used here

error: cannot transfer mutable local `_v5` since it is borrowed
   ┌─ TEMPFILE1:86:19
   │
85 │         let _v6 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_S_f_0(_v5);
   │                   ----------------------------------------------------------- previously mutably borrowed here
86 │         let _v7 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_S_g_1(_v5);
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ transfer attempted here
87 │         assert!(*_v6 == 0, 0);
   │                 ---- conflicting reference `_v6` used here


task 2 lines 103-103:  run  0x42::test_pack_unpack_ref::unpack_ref_G
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
