third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/migrated_tests/round-trip/public_pack_unpack_ref.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/migrated_tests/public_pack_unpack_ref.move`

//# publish
module 0x42::pack_unpack_ref {
    struct G has drop {
        x1: u64,
        x2: u64,
        s: S,
    }
    struct S has drop {
        f: u64,
        g: u64,
    }
    #[pack]
    public fun pack_0x42_pack_unpack_ref_G(p0: u64, p1: u64, p2: S): G {
        G{x1: p0, x2: p1, s: p2}
    }
    #[unpack]
    public fun unpack_0x42_pack_unpack_ref_G(p0: G): (u64, u64, S) {
        let G{x1: _v0, x2: _v1, s: _v2} = p0;
        (_v0, _v1, _v2)
    }
    #[borrow]
    public fun borrow_0x42_pack_unpack_ref_G_x1_0(p0: &G): &u64 {
        &p0.x1
    }
    #[borrow]
    public fun borrow_0x42_pack_unpack_ref_G_x2_1(p0: &G): &u64 {
        &p0.x2
    }
    #[borrow]
    public fun borrow_0x42_pack_unpack_ref_G_s_2(p0: &G): &S {
        &p0.s
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_pack_unpack_ref_G_x1_0(p0: &mut G): &mut u64 {
        &mut p0.x1
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_pack_unpack_ref_G_x2_1(p0: &mut G): &mut u64 {
        &mut p0.x2
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_pack_unpack_ref_G_s_2(p0: &mut G): &mut S {
        &mut p0.s
    }
    #[pack]
    public fun pack_0x42_pack_unpack_ref_S(p0: u64, p1: u64): S {
        S{f: p0, g: p1}
    }
    #[unpack]
    public fun unpack_0x42_pack_unpack_ref_S(p0: S): (u64, u64) {
        let S{f: _v0, g: _v1} = p0;
        (_v0, _v1)
    }
    #[borrow]
    public fun borrow_0x42_pack_unpack_ref_S_f_0(p0: &S): &u64 {
        &p0.f
    }
    #[borrow]
    public fun borrow_0x42_pack_unpack_ref_S_g_1(p0: &S): &u64 {
        &p0.g
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_pack_unpack_ref_S_f_0(p0: &mut S): &mut u64 {
        &mut p0.f
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_pack_unpack_ref_S_g_1(p0: &mut S): &mut u64 {
        &mut p0.g
    }
}


//# publish
module 0x42::test_pack_unpack_ref {
    use 0x42::pack_unpack_ref;
    fun unpack_ref_G() {
        let _v0 = pack_unpack_ref::pack_0x42_pack_unpack_ref_S(0, 1);
        let _v1 = pack_unpack_ref::pack_0x42_pack_unpack_ref_G(2, 3, _v0);
        let _v2 = &mut _v1;
        let _v3 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_x1_0(_v2);
        let _v4 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_x2_1(_v2);
        let _v5 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_G_s_2(_v2);
        let _v6 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_S_f_0(_v5);
        let _v7 = pack_unpack_ref::borrow_mut_0x42_pack_unpack_ref_S_g_1(_v5);
        assert!(*_v6 == 0, 0);
        assert!(*_v7 == 1, 1);
        assert!(*_v3 == 2, 2);
        assert!(*_v4 == 3, 3);
        *_v3 = *_v3 + 1;
        *_v4 = *_v4 + 1;
        *_v6 = *_v6 + 1;
        *_v7 = *_v7 + 1;
        assert!(*_v6 == 1, 0);
        assert!(*_v7 == 2, 1);
        assert!(*_v3 == 3, 2);
        assert!(*_v4 == 4, 3);
    }
}


//# run  0x42::test_pack_unpack_ref::unpack_ref_G